fixed font sizes, spacing for mobile on nav bar and index

--- a/styles.css
+++ b/styles.css
@@ -63,16 +63,15 @@ html, body {
   text-decoration: none;
 }
 
-
 .toggle-button {
   position: absolute;
-  top: 2rem;
+  top: 1rem;
   right: 1rem;
   display: none;
   flex-direction: column;
   justify-content: space-between;
-  width: 30px;
-  height: 21px;
+  width: 80px;
+  height: 61px;
 }
 
 .toggle-button .bar {
@@ -82,8 +81,7 @@ html, body {
   border-radius: 10px;
 }
 
-
-@media (max-width: 1150px) {
+@media (max-width: 1270px) {
   .nav_bar {
       flex-direction: column;
       align-items: flex-start;
@@ -115,11 +113,22 @@ html, body {
   }
 
   .nav_bar_links ul li a {
-      padding: .5rem 1rem;
+    display: block;
+    color:green;
+    padding: .5rem 1rem;
+    text-decoration: none;
+    display: block;
+    font-size: 300%;
   }
 
   .nav_bar_links.active {
       display: flex;
+  }
+
+  /* nav bar styles */ 
+  .brand-title {
+    font-size: 3rem;
+    margin: 1.5rem;
   }
 }
 
@@ -289,8 +298,21 @@ html, body {
 
 @media (max-width: 1350px) {
   .main_page_large_picture_grid {
-    grid-template-columns: 1fr;
-    grid-template-areas: content;
+
+    background-image: url(img/woman_soccer_field.jpg);
+  background-position: 25% 61%; 
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 75%;
+  z-index: -1;
+  text-align: center;
+  margin-bottom: 0.5%;
+  display:grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(6, 1fr);
+  padding: 0 40px;
+  grid-template-areas: "content";
   }
 
   .about_preview_grid {
@@ -298,10 +320,25 @@ html, body {
     grid-template-columns: 1fr;
     grid-template-areas: "txt" "img";
     grid-row-gap: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 
   .about_preview_text {
+    grid-area: txt;
+    font-size: 200%;
     text-align: center;
+  }
+
+  .my_journey_link {
+    font-family:  Helvetica, Arial, sans-serif; 
+    display: block;
+    color:white;
+    background-color: green;
+    text-align: center;
+    padding: 4% 4%;
+    text-decoration: none;
+    font-size: 300%;
   }
 
   .pricing_grid {
@@ -320,12 +357,12 @@ html, body {
   }
 
   .sessions_column {
-    margin-top: 20%;
+    margin-top: 10%;
   }
 
   .availiable_for_column {
     padding-left: 0%;
-    padding-top: 10%;
+    padding-top: 3%;
   }
 
   .availiable_for_column ul {
@@ -337,20 +374,43 @@ html, body {
 
   .pricing_row_title {
     text-align: center;
+    font-family:  Helvetica, Arial, sans-serif; 
+    font-size: 300%;
   }
 
   .pricing_row_bullet {
     text-align: left;
     position:relative;
     left: 10%;
+    font-family:  Helvetica, Arial, sans-serif; 
+    font-size: 200%;
   }
 
   .pricing_link {
-    margin: 2%;
+    font-size: 300%;
   }
+
+  .price_schedule_button_column {
+    grid-area: column3;
+    text-align: left;
+    padding-top: 0%;
+    padding-bottom: 5%;
+   }
 
   .footer_grid {
     grid-template-columns: 1fr;
+  }
+
+  .footer_link {
+    float: left;
+    font-family:  Helvetica, Arial, sans-serif; 
+    display: block;
+    color:white;
+    text-align: center;
+    padding: 5% 5%;
+    text-decoration: none;
+    font-size: 200%;
+    border: 3px solid white;
   }
 
 }
